# chicony-ir-toggle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ir_led.py  main.c
ansible/: enable_ir.yml  pre-suspend.sh
system/: 99-ir-led.rules.cmake  ir-led.sh.cmake
